Disable SSL OpenLDAP until certs are sorted

--- a/scripts/ci/ldap/slapd2.conf
+++ b/scripts/ci/ldap/slapd2.conf
@@ -31,9 +31,9 @@ rootpw secret
 # Note - these will not match the host name so clients need to use 
 #        the "allow" option when checking certificates
 #
-TLSCACertificateFile /tmp/ldap2/certs/cacert.pem
-TLSCertificateFile /tmp/ldap2/certs/servercert.pem
-TLSCertificateKeyFile /tmp/ldap2/certs/serverkey.pem
+#TLSCACertificateFile /tmp/ldap2/certs/cacert.pem
+#TLSCertificateFile /tmp/ldap2/certs/servercert.pem
+#TLSCertificateKeyFile /tmp/ldap2/certs/serverkey.pem
 
 #######################################################################
 # mdb database definitions
