--- a/raddb/radiusd.conf.in
+++ b/raddb/radiusd.conf.in
@@ -77,11 +77,7 @@ modconfdir = ${confdir}/mods-config
 certdir = ${confdir}/certs
 cadir   = ${confdir}/certs
 run_dir = ${localstatedir}/run/${name}
-
-#
-#  Should likely be ${localstatedir}/lib/radiusd
-#
-db_dir = ${raddbdir}
+db_dir = ${localstatedir}/lib/${name}
 
 #
 #  libdir:: Where to find the rlm_* modules.
