--- a/src/tests/modules/ldap/module.conf
+++ b/src/tests/modules/ldap/module.conf
@@ -20,7 +20,7 @@ ldap {
 #	server = 'ldap.rrdns.example.org'
 
 	#  Port to connect on, defaults to 389, will be ignored for LDAP URIs.
-#	port = 389
+	port = $ENV{LDAP_TEST_SERVER_PORT}
 
 	#  Administrator account for searching and possibly modifying.
 	identity = 'cn=admin,dc=example,dc=com'
