--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -65,6 +65,7 @@ jobs:
         run: |
           export PATH=`pwd`/coverity_tool/bin:$PATH
           ./configure -with-rlm-python-bin=/usr/bin/python2.7
+          cov-configure --config coverity.xml --comptype gcc --compiler cc1 --template
           cov-build --dir cov-int make
 
       - name: Display build result
