tests use certs from src/tests/certs, not raddb/certs

--- a/src/tests/modules/smtp/module.conf
+++ b/src/tests/modules/smtp/module.conf
@@ -1,11 +1,11 @@
 #smtp unit test config
 smtp {
 	tls {
-		ca_file	= "$ENV{top_srcdir}raddb/certs/rsa/ca.pem"
+		ca_file	= "src/tests/certs/certs/rsa/ca.pem"
 
-		certificate_file = "$ENV{top_srcdir}raddb/certs/rsa/client.pem"
+		certificate_file = "src/tests/certs/certs/rsa/client.pem"
 
-		private_key_file = "$ENV{top_srcdir}raddb/certs/rsa/client.key"
+		private_key_file = "src/tests/certs/certs/rsa/client.key"
 
 		private_key_password = "whatever"
 
