--- a/src/tests/modules/imap/imap_bad_tls/module.conf
+++ b/src/tests/modules/imap/imap_bad_tls/module.conf
@@ -5,11 +5,11 @@ imap imap_bad_tls {
 	timeout 	= 1000
 
 	tls {
-             	ca_file			= "$ENV{top_srcdir}raddb/certs/rsa/client.pem"
+             	ca_file			= "src/tests/certs/certs/rsa/client.pem"
 
-               	certificate_file     	= "$ENV{top_srcdir}raddb/certs/rsa/client.pem" 
+               	certificate_file     	= "src/tests/certs/certs/rsa/client.pem" 
  
-		private_key_file        = "$ENV{top_srcdir}raddb/certs/rsa/client.key"
+		private_key_file        = "src/tests/certs/certs/rsa/client.key"
 
                	private_key_password 	= "whatever"
 
