--- a/src/tests/modules/smtp/smtp_authenticate/module.conf
+++ b/src/tests/modules/smtp/smtp_authenticate/module.conf
@@ -6,11 +6,11 @@ smtp {
 	template_directory = "$ENV{top_srcdir}build/ci/exim4/"
 
 	tls {
-		ca_file	= "src/tests/certs/certs/rsa/ca.pem"
+		ca_file	= "$ENV{top_srcdir}raddb/certs/rsa/ca.pem"
 
-		certificate_file = "src/tests/certs/certs/rsa/client.pem"
+		certificate_file = "$ENV{top_srcdir}raddb/certs/rsa/client.pem"
 
-		private_key_file = "src/tests/certs/certs/rsa/client.key"
+		private_key_file = "$ENV{top_srcdir}raddb/certs/rsa/client.key"
 
 		private_key_password = "whatever"
 
