Isolate redis test keys from different tests

--- a/src/tests/modules/cache_redis/module.conf
+++ b/src/tests/modules/cache_redis/module.conf
@@ -11,7 +11,7 @@ cache {
 		server = $ENV{REDIS_TEST_SERVER}:30006
 	}
 
-	key = "%{Tmp-String-0}"
+	key = "$ENV{MODULE_TEST_UNLANG}%{Tmp-String-0}"
 	ttl = 2
 
 	update {
@@ -35,7 +35,7 @@ cache cache_update {
 		server = $ENV{REDIS_TEST_SERVER}:30006
 	}
 
-	key = "%{Tmp-String-0}"
+	key = "$ENV{MODULE_TEST_UNLANG}%{Tmp-String-0}"
 	ttl = 2
 
 	#
