Fixup cache redis tests

--- a/src/tests/modules/cache_redis/module.conf
+++ b/src/tests/modules/cache_redis/module.conf
@@ -3,12 +3,12 @@ cache {
 	driver = "rlm_cache_redis"
 
 	redis {
-		server = $ENV{REDIS_TEST_SERVER}:30001
-		server = $ENV{REDIS_TEST_SERVER}:30002
-		server = $ENV{REDIS_TEST_SERVER}:30003
-		server = $ENV{REDIS_TEST_SERVER}:30004
-		server = $ENV{REDIS_TEST_SERVER}:30005
-		server = $ENV{REDIS_TEST_SERVER}:30006
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30001
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30002
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30003
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30004
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30005
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30006
 	}
 
 	key = "$ENV{MODULE_TEST_UNLANG}%{Tmp-String-0}"
@@ -27,12 +27,12 @@ cache cache_update {
 	driver = "rlm_cache_redis"
 
 	redis {
-		server = $ENV{REDIS_TEST_SERVER}:30001
-		server = $ENV{REDIS_TEST_SERVER}:30002
-		server = $ENV{REDIS_TEST_SERVER}:30003
-		server = $ENV{REDIS_TEST_SERVER}:30004
-		server = $ENV{REDIS_TEST_SERVER}:30005
-		server = $ENV{REDIS_TEST_SERVER}:30006
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30001
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30002
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30003
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30004
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30005
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30006
 	}
 
 	key = "$ENV{MODULE_TEST_UNLANG}%{Tmp-String-0}"
@@ -77,12 +77,12 @@ cache cache_bin_key_octets {
 	driver = "rlm_cache_redis"
 
 	redis {
-		server = $ENV{REDIS_TEST_SERVER}:30001
-		server = $ENV{REDIS_TEST_SERVER}:30002
-		server = $ENV{REDIS_TEST_SERVER}:30003
-		server = $ENV{REDIS_TEST_SERVER}:30004
-		server = $ENV{REDIS_TEST_SERVER}:30005
-		server = $ENV{REDIS_TEST_SERVER}:30006
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30001
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30002
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30003
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30004
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30005
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30006
 	}
 
 	key = &Tmp-Octets-0
@@ -97,12 +97,12 @@ cache cache_bin_key_ipaddr {
 	driver = "rlm_cache_redis"
 
 	redis {
-		server = $ENV{REDIS_TEST_SERVER}:30001
-		server = $ENV{REDIS_TEST_SERVER}:30002
-		server = $ENV{REDIS_TEST_SERVER}:30003
-		server = $ENV{REDIS_TEST_SERVER}:30004
-		server = $ENV{REDIS_TEST_SERVER}:30005
-		server = $ENV{REDIS_TEST_SERVER}:30006
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30001
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30002
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30003
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30004
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30005
+		server = $ENV{CACHE_REDIS_TEST_SERVER}:30006
 	}
 
 	key = &Tmp-IP-Address-0
