DEB packaging: python-dev has been dropped in Sid

--- a/debian/control.in
+++ b/debian/control.in
@@ -30,7 +30,7 @@ Build-Depends: @BUILDDEPS@ debhelper (>= 9),
  libykclient-dev,
  libmemcached-dev,
  libhiredis-dev,
- python-dev,
+ python-dev | python3-dev,
  samba-dev,
  unixodbc-dev,
  asciidoctor,
