Detect and link libm
Since 09adee3bfaff25b6a97ee942ce1228c0af02fc69 we require libm for
fpclassify().

--- a/configure.ac
+++ b/configure.ac
@@ -917,6 +917,11 @@ dnl #  older Linuxes for clock_gettime.
 dnl #
 AC_CHECK_LIB(rt, clock_gettime)
 
+dnl #
+dnl #  Check for -lm
+dnl #
+AC_CHECK_LIB(m, sqrt)
+
 dnl #############################################################
 dnl #
 dnl #  2b. Checks for system header files
