CI FreeBSD: Cache the eapol_test build

--- a/.github/workflows/ci-freebsd.yml
+++ b/.github/workflows/ci-freebsd.yml
@@ -7,6 +7,10 @@ on:
       - run-fuzzer**
   pull_request:
 
+env:
+  HOSTAPD_BUILD_DIR: eapol_test.ci
+  HOSTAPD_GIT_TAG: hostap_2_9
+
 jobs:
   freebsd-build:
 
@@ -38,12 +42,20 @@ jobs:
       run: git lfs pull
       working-directory: freeradius
 
+    - name: Restore eapol_test build directory from cache
+      uses: actions/cache@v2
+      id: hostapd-cache
+      with:
+        path: ${{ env.HOSTAPD_BUILD_DIR }}
+        key: hostapd-freebsd-${{ env.HOSTAPD_GIT_TAG }}-v4
+
     - name: Test using a FreeBSD VirtualBox VM
       uses: vmactions/freebsd-vm@v0.1.5
       with:
         usesh: true
         sync: rsync
         mem: 4096
+        envs: 'HOSTAPD_BUILD_DIR HOSTAPD_GIT_TAG'
         prepare: |
           pkg install -y         \
             curl                 \
