use the correct reference.  Fixes #4253

--- a/raddb/mods-config/sql/main/mssql/queries.conf
+++ b/raddb/mods-config/sql/main/mssql/queries.conf
@@ -209,7 +209,7 @@ accounting {
 					FramedIPv6Prefix, \
 					FramedInterfaceId, \
 					DelegatedIPv6Prefix \
-					${..class.column_name}) \
+					${....class.column_name}) \
 			VALUES(\
 				'%{Acct-Session-Id}', \
 				'%{Acct-Unique-Session-Id}', \
@@ -279,7 +279,7 @@ accounting {
 					AcctStartDelay, \
 					AcctStopDelay, \
 					XAscendSessionSvrKey \
-					${..class.column_name}) \
+					${....class.column_name}) \
 				VALUES(\
 					'%{Acct-Session-Id}', \
 					'%{Acct-Unique-Session-Id}', \
@@ -387,7 +387,7 @@ accounting {
 					DelegatedIPv6Prefix, \
 					AcctStartDelay, \
 					XAscendSessionSvrKey \
-					${..class.column_name}) \
+					${....class.column_name}) \
 				VALUES(\
 					'%{Acct-Session-Id}', \
 					'%{Acct-Unique-Session-Id}', \
@@ -488,7 +488,7 @@ accounting {
 					DelegatedIPv6Prefix, \
 					AcctStartDelay, \
 					AcctStopDelay \
-					${..class.column_name}) \
+					${....class.column_name}) \
 				VALUES(\
 					'%{Acct-Session-Id}', \
 					'%{Acct-Unique-Session-Id}', \
