--- a/raddb/mods-config/sql/main/oracle/queries.conf
+++ b/raddb/mods-config/sql/main/oracle/queries.conf
@@ -356,7 +356,7 @@ accounting {
 					AcctStartDelay,	\
 					AcctStopDelay, \
 					XAscendSessionSvrKey \
-					${..class.column_name}) \
+					${....class.column_name}) \
 				VALUES(\
 					'', \
 					'%{Acct-Session-Id}', \
@@ -474,7 +474,7 @@ accounting {
 					DelegatedIPv6Prefix, \
 					AcctStartDelay,	\
 					XAscendSessionSvrKey \
-					${..class.column_name}) \
+					${....class.column_name}) \
 				VALUES(\
 					'', \
 					'%{Acct-Session-Id}', \
@@ -587,7 +587,7 @@ accounting {
 					DelegatedIPv6Prefix, \
 					AcctStartDelay,	\
 					AcctStopDelay \
-					${..class.column_name}) \
+					${....class.column_name}) \
 				VALUES(\
 					'', \
 					'%{Acct-Session-Id}', \
