use -f for "don't fork", not "-X" for "kill me with debug output"

--- a/scripts/docker/build-centos7/Dockerfile
+++ b/scripts/docker/build-centos7/Dockerfile
@@ -21,4 +21,4 @@ FROM ${from}
 COPY --from=0 /opt/freeradius /opt/freeradius
 
 EXPOSE 1812/udp 1813/udp
-CMD ["/opt/freeradius/sbin/radiusd", "-X"]
+CMD ["/opt/freeradius/sbin/radiusd", "-f"]
