--- a/scripts/docker/build-debian9/Dockerfile
+++ b/scripts/docker/build-debian9/Dockerfile
@@ -21,4 +21,4 @@ FROM ${from}
 COPY --from=0 /opt/freeradius /opt/freeradius
 
 EXPOSE 1812/udp 1813/udp
-CMD ["/opt/freeradius/sbin/radiusd", "-X"]
+CMD ["/opt/freeradius/sbin/radiusd", "-f"]
