--- a/debian/control.in
+++ b/debian/control.in
@@ -27,7 +27,7 @@ Build-Depends: @BUILDDEPS@ debhelper (>= 9),
  libykclient-dev,
  libmemcached-dev,
  libhiredis-dev,
- python-dev | python3-dev,
+ python-dev | python3-dev | libpython3-dev,
  samba-dev | samba4-dev
 Section: net
 Priority: optional
